加入外围水波纹

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,6 +9,7 @@
     <com.rain.library.CustomProgressBar
         android:layout_width="150dp"
         android:layout_height="150dp"
+        app:sweepColor="#dd5566"
         android:layout_gravity="center" />
 
 </FrameLayout>
